// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SortButton /> when it is active is in ascending direction matches snapshot 1`] = `
<button
  className="button buttonActive"
  onClick={[Function]}
  type="button"
>
  <Message
    capitalize={false}
    content="test-title"
    firstToLower={false}
    firstToUpper={false}
    lowercase={false}
    uppercase={false}
  />
  <Icon
    className="icon"
    icon="sort_order_asc"
    large={false}
    nudgeDown={false}
    nudgeUp={true}
    small={false}
  />
</button>
`;

exports[`<SortButton /> when it is active when it is in descending direction matches snapshot 1`] = `
<button
  className="button buttonActive buttonDesc"
  onClick={[Function]}
  type="button"
>
  <Message
    capitalize={false}
    content="test-title"
    firstToLower={false}
    firstToUpper={false}
    lowercase={false}
    uppercase={false}
  />
  <Icon
    className="icon"
    icon="sort_order_desc"
    large={false}
    nudgeDown={false}
    nudgeUp={true}
    small={false}
  />
</button>
`;

exports[`<SortButton /> when it is not active matches snapshot 1`] = `
<button
  className="button"
  onClick={[Function]}
  type="button"
>
  <Message
    capitalize={false}
    content="test-title"
    firstToLower={false}
    firstToUpper={false}
    lowercase={false}
    uppercase={false}
  />
  <Icon
    className="icon"
    icon="sort_order"
    large={false}
    nudgeDown={false}
    nudgeUp={true}
    small={false}
  />
</button>
`;
